@@ -16,6 +16,7 @@ PHP 4                                                                      NEWS
   is used for background color. (Pierre-Alain Joye)
 - Fixed a bug that under certain circumstances could invalidate safe_mode.
   (Ilia)
+- Fixed bug #24827 (ob_gzhandler overrides Vary header). (Ilia)
 - Fixed bug #24783 (foreach($ar as $key => $val), $key not binary safe). (Zeev)
 - Fixed bug #24760 (non-default SNMP port number not working). (Jani)
 - Fixed bug #24752 (Unhandled "uniqueidentifier" field type). 
